--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,9 +1,15 @@
-<h2>Product Details</h2>
+<app-top-bar></app-top-bar>
 
-<div *ngIf="product">
-  <h3>{{ product.name }}</h3>
-  <h4>{{ product.price | currency }}</h4>
-  <p>{{ product.description }}</p>
+<div class="container">
+  <div>
+    <h2>Product Details</h2>
 
-  <button (click)="addToCart(product)">Buy</button>
+    <div *ngIf="product">
+      <h3>{{ product.name }}</h3>
+      <h4>{{ product.price | currency }}</h4>
+      <p>{{ product.description }}</p>
+
+      <button (click)="addToCart(product)">Buy</button>
+    </div>
+  </div>
 </div>
