--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,21 +1,27 @@
-<h2>Products</h2>
+<app-top-bar></app-top-bar>
 
-<div *ngFor="let product of products">
-  <h3>
-    <a
-      [title]="product.name + ' details'"
-      [routerLink]="['/products', product.id]"
-    >
-      {{ product.name }}
-    </a>
-  </h3>
+<div class="container">
+  <div>
+    <h2>Products</h2>
 
-  <p *ngIf="product.description">Description: {{ product.description }}</p>
+    <div *ngFor="let product of products">
+      <h3>
+        <a
+          [title]="product.name + ' details'"
+          [routerLink]="['/myshop/products', product.id]"
+        >
+          {{ product.name }}
+        </a>
+      </h3>
 
-  <button (click)="share()">Share</button>
+      <p *ngIf="product.description">Description: {{ product.description }}</p>
 
-  <app-product-alerts [product]="product" (notify)="onNotify()">
-  </app-product-alerts>
+      <button (click)="share()">Share</button>
+
+      <app-product-alerts [product]="product" (notify)="onNotify()">
+      </app-product-alerts>
+    </div>
+  </div>
 </div>
 
 <!-- 
