5 files modified, 18 added

--- a/src/app/heroes-dashboard/heroes-dashboard.component.html
+++ b/src/app/heroes-dashboard/heroes-dashboard.component.html
@@ -1,1 +1,9 @@
-<p>heroes-dashboard works!</p>
+<hero-card>
+  <h1 title>{{ dashTitle }}</h1>
+
+  <hero-nav [navigation]="'dashboard'"></hero-nav>
+
+  <div class="justify-center">
+    <h2>Top Heroes</h2>
+  </div>
+</hero-card>
