--- a/src/styles.css
+++ b/src/styles.css
@@ -145,6 +145,11 @@ Use of this source code is governed by an MIT-style license that
 can be found in the LICENSE file at https://angular.io/license
 */
 
+.justify-content-space-around {
+  display: flex;
+  justify-content: space-around;
+}
+
 .justify-center {
   display: flex;
   justify-content: center;
