--- a/src/app/front-page/front-page.component.html
+++ b/src/app/front-page/front-page.component.html
@@ -1,6 +1,6 @@
 <div class="frontPage-container">
   <div class="justify-content-space-around">
-    <a routerLink="/myshop">My shop application</a>
-    <a routerLink="/dashboard">Tour of Heroes application</a>
+    <a class="shop" routerLink="/myshop">My shop application</a>
+    <a class="heroes" routerLink="/dashboard">Tour of Heroes application</a>
   </div>
 </div>
