--- a/src/app/front-page/front-page.component.css
+++ b/src/app/front-page/front-page.component.css
@@ -7,7 +7,15 @@ a {
   align-items: center;
   justify-content: center;
   font-size: 17px;
-  mask-image: url();
+}
+
+a.shop {
+  background-image: url('/assets/shop.jpg');
+}
+
+a.heroes {
+  background-image: url('/assets/hero.jpg');
+  color:white;
 }
 
 .frontPage-container {
