--- a/src/app/heroes-dashboard/heroes-dashboard.component.html
+++ b/src/app/heroes-dashboard/heroes-dashboard.component.html
@@ -6,4 +6,13 @@
   <div class="justify-center">
     <h2>Top Heroes</h2>
   </div>
+  <div class="display-flex margin-top-xl">
+    <a
+      [routerLink]="['/heroes', hero.id]"
+      class="topHeroes"
+      *ngFor="let hero of topHeroes"
+    >
+      {{ hero.name }}
+    </a>
+  </div>
 </hero-card>
