--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -1,8 +1,18 @@
-span {
+label {
   color: forestgreen;
   font-weight: 600;
+  font-size: 16px;
+  width: 115px;
 }
 
 button {
   background-color: lightseagreen;
+}
+
+.input-con {
+  display: flex;
+}
+
+.input-con label {
+  margin-top: 10px;
 }
