--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -16,3 +16,11 @@ button {
 .input-con label {
   margin-top: 10px;
 }
+
+.validation {
+  display: none;
+}
+
+.validation.active{
+  display: block;
+}
