--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -20,6 +20,7 @@
           [(ngModel)]="selectedHero.name"
           (change)="onChange(selectedHero)"
         />
+        <span class="validation"></span>
       </div>
       <div class="input-con">
         <label for="strength">strength:</label>
